# budget-audit

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backlog.md  corrections.md  data-model.md  methodology.md  milestones.md  public-records-request-template.md  report-design.md  value-model.md  weakley-county.md  weakley-fwm-2026-06-30-workflow.md
docs/checkpoints/: weakley-fwm-2026-06-30-fund-141-pages-086-138.md  weakley-fwm-2026-06-30-fund-143-pages-139-142.md  weakley-fwm-2026-06-30-fund-151-pages-143-149.md  weakley-fwm-2026-06-30-fund-171-pages-150-152.md  weakley-fwm-2026-06-30-fund-172-pages-153-155.md  weakley-fwm-2026-06-30-fund-202-pages-156-158.md  weakley-fwm-2026-06-30-investment-policy-resolution-2026-52.md  weakley-fwm-2026-06-30-pages-023-085.md
examples/: weakley_packet_manifest.example.yml
reports/: weakley-fwm-2026-06-30.md
review/weakley-fwm-2026-06-30/: manual_row_corrections_023_085.csv  (+14 more)
scripts/: enrich_ocr_rows_with_page_review.py  ocr_compensation_hits.py  summarize_enriched_rows.py
tests/: test_analyze.py  test_classify.py  test_clusters.py  test_compensation.py  test_consolidate.py  test_corrections.py  test_data_quality.py  test_findings.py  test_manual_corrections.py  test_normalize.py  test_ocr_table_rows.py  test_priority_areas.py  test_questions.py  test_reconcile.py  test_related_items.py  test_report.py  test_report_workflow.py  test_review.py  test_row_classify.py  test_structural_changes.py  test_subtotal_reconcile.py  test_summarize.py  test_top_changes.py  test_workflow.py
(+33 files in other folders)
